--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
@@ -20,6 +20,9 @@
             <img src="/imgs/search.png" alt="Search" id="search" class="search">
         </button>
         <input type="text" placeholder="Buscar...">
+    </div>
+    <div>
+        <a href="/CheckList.html">CheckList</a>
     </div>
 </body>
 </html>
