--- a/Index.html
+++ b/Index.html
@@ -7,22 +7,24 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <div class="container"> <!--Logo y menu-->
-        <div class="logo">
-            <img src="/imgs/logo.png" alt="Logo">
+    <header>
+        <div class="container"> <!--Logo y menu-->
+            <div class="logo">
+                <img src="/imgs/logo.png" alt="Logo">
+            </div>
+            <div class="menu">
+                <img src="/imgs/menu.webp" alt="menu">
+            </div>
         </div>
-        <div class="menu">
-            <img src="/imgs/menu.webp" alt="menu">
-        </div>
-    </div>
+    </header>
     <div class="searchBar"> <!--Search Bar-->
         <button>
             <img src="/imgs/search.png" alt="Search" id="search" class="search">
         </button>
         <input type="text" placeholder="Buscar...">
     </div>
-    <div>
-        <a href="/CheckList.html">CheckList</a>
+    <div class="localGroup">
+        <a href="/CheckList.html" class="local">CheckList</a>
     </div>
 </body>
 </html>
