añadido de base de datos

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="/js/app.js" defer></script>
 </head>
 <body>
     <header>
@@ -23,8 +25,8 @@
         </button>
         <input type="text" placeholder="Buscar...">
     </div>
-    <div class="localGroup">
-        <a href="/CheckList.html" class="local">CheckList</a>
+    <div id="localGroup">
+        
     </div>
 </body>
 </html>
