--- a/CheckList.html
+++ b/CheckList.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CheckList</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="/js/config.js" defer></script>
+    <script src="/js/usuario.js" defer></script>
 </head>
 <body>
-    <a href="/InfoCat.html">InfoCat</a>
+   <div id="usuarioGroup">
+    
+   </div>
 </body>
 </html>
