--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,8 @@
     <title>Index</title>
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="/js/app.js" defer></script>
+    <script src="/js/config.js" defer></script>
+    <script src="/js/local.js" defer></script>
 </head>
 <body>
     <header>
